--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         
                         <input type="submit" value="Submit" class="m-3 p-2 bg-orange-300 rounded overflow-hidden hover:bg-orange-300">
                     </form>
-                    <div id="thankYouMessage" style="display: none;">
+                    <div id="thankYouMessage" style="display: none;" class="text-center font-bold mt-10 text-2xl">
                         <h2>Thank you for your message!</h2>
                     </div>
                 </div>
